--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,7 +1,6 @@
 body {
-  background-color: black;
-  color: white;
   word-break: break-word;
+  background-color: #f3f3f3;
 }
 
 h1,
@@ -19,7 +18,7 @@ ul {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: monospace;
+  font-family: sans-serif;
 }
 
 #me {
@@ -29,21 +28,15 @@ ul {
   padding: 8px;
 }
 
-#title {
-  font-size: 24pt;
-  padding: 16px;
-  text-align: center;
-}
-
 #subtitle {
-  font-size: 20pt;
+  font-size: 16pt;
   padding: 8px;
   text-align: center;
 }
 
 #content {
   max-width: 800px;
-  font-size: 16pt;
+  font-size: 14pt;
   line-height: 1.4;
 }
 
@@ -56,5 +49,5 @@ ul {
 }
 
 .link {
-  color: lightblue;
+  color: green;
 }
