--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,6 +1,14 @@
+html {
+  margin: 0;
+  scroll-behavior: smooth;
+}
+
 body {
+  margin: 0;
   word-break: break-word;
-  background-color: #f3f3f3;
+  font-size: 13pt;
+  font-family: Arial;
+  color: #222222;
 }
 
 h1,
@@ -9,45 +17,78 @@ h3,
 h4,
 h5,
 h6,
-p,
-ul {
+p {
   margin: 0;
 }
 
-#main {
+#container {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: sans-serif;
 }
 
-#me {
-  margin: 0;
-  border-radius: 100%;
-  max-width: 250px;
-  padding: 8px;
+#topbar {
+  display: flex;
+  position: sticky;
+  top: 0;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  background-color: #f3f3f3;
+  box-shadow: 5px 5px 5px lightgrey;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
 }
 
-#subtitle {
-  font-size: 16pt;
-  padding: 8px;
-  text-align: center;
+#links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.bar-item {
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 #content {
-  max-width: 800px;
-  font-size: 14pt;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding-top: 2rem;
+  padding-bottom: 3rem;
+  flex-wrap: wrap;
+  max-width: 1000px;
+}
+
+#hello-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#me {
+  height: 400px;
+  border-radius: 5%;
+  margin-bottom: 8px;
+}
+
+#hello {
+  font-weight: bold;
+  font-size: 24pt;
+  color: black;
+}
+
+#about-container {
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 0.5rem;
+  max-width: 600px;
   line-height: 1.4;
+  font-size: 14pt;
 }
 
-#content > ul {
-  padding: 8px;
-}
-
-#content > p {
-  padding: 16px;
-}
-
-.link {
-  color: green;
+.about-par {
+  padding-bottom: 1.5rem;
 }
